build(dependencies): ⬆️  Update

--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
   "bugs": {
     "url": "https://github.com/xeho91/personal-wesbite/issues"
   },
-  "engines": {
-    "node": ">=14.0.0"
-  },
   "type": "module",
   "scripts": {
     "build": "svelte-kit build",
@@ -40,15 +37,16 @@
     "@sveltejs/adapter-static": "next",
     "@sveltejs/adapter-vercel": "next",
     "@sveltejs/kit": "next",
-    "@tsconfig/svelte": "^1.0.13",
-    "@types/node": "^15.6.1",
+    "@tsconfig/svelte": "^2.0.1",
+    "@types/node": "^15.12.4",
     "@types/nodemailer": "^6.4.2",
-    "@typescript-eslint/eslint-plugin": "^4.25.0",
-    "@typescript-eslint/parser": "^4.25.0",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
     "autoprefixer": "^10.2.6",
+    "case": "^1.6.3",
     "commitlint": "^12.1.4",
     "dotenv": "^10.0.0",
-    "eslint": "^7.27.0",
+    "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-html": "^6.1.2",
     "eslint-plugin-promise": "^5.1.0",
@@ -56,22 +54,22 @@
     "eslint-plugin-svelte3": "^3.2.0",
     "fs-extra": "^10.0.0",
     "gacp": "^2.10.2",
-    "html-to-text": "^7.1.1",
+    "html-to-text": "^8.0.0",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
     "markdownlint": "^0.23.1",
     "markdownlint-cli": "^0.27.1",
-    "mdsvex": "^0.9.6",
-    "nodemailer": "^6.6.1",
+    "mdsvex": "^0.9.7",
+    "nodemailer": "^6.6.2",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.3.0",
+    "postcss": "^8.3.5",
     "postcss-cli": "^8.3.1",
-    "postcss-mixins": "^8.0.0",
+    "postcss-mixins": "^8.1.0",
     "postcss-preset-env": "^6.7.0",
     "postcss-reporter": "^7.0.2",
     "postcss-size": "^4.0.1",
-    "prettier": "^2.3.0",
-    "prettier-plugin-svelte": "^2.3.0",
+    "prettier": "^2.3.1",
+    "prettier-plugin-svelte": "^2.3.1",
     "rehype-autolink-headings": "^5.1.0",
     "rehype-slug": "^4.0.1",
     "remark-abbr": "^1.4.1",
@@ -84,21 +82,19 @@
     "stylelint-config-recommended": "^5.0.0",
     "stylelint-declaration-use-variable": "^1.7.3",
     "svelte": "^3.38.2",
-    "svelte-check": "^2.0.0",
+    "svelte-check": "^2.2.0",
     "svelte-preprocess": "^4.7.3",
-    "tslib": "^2.2.0",
-    "typescript": "^4.3.2"
+    "tslib": "^2.3.0",
+    "typescript": "^4.3.4",
+    "vite-tsconfig-paths": "^3.3.13"
   },
   "dependencies": {
     "@iconify-icons/carbon": "^1.1.4",
-    "@iconify-icons/simple-icons": "^1.1.26",
+    "@iconify-icons/simple-icons": "^1.1.29",
     "@iconify-icons/twemoji": "^1.1.2",
     "@iconify/svelte": "^1.0.4",
-    "@xeho91/avatar": "github:xeho91/avatar#main",
-    "@xeho91/colors": "^3.0.1",
-    "@xeho91/fonts": "github:xeho91/fonts#main",
-    "@xeho91/logo": "github:xeho91/logo#main",
-    "case": "^1.6.3",
+    "@xeho91/assets": "^1.0.0",
+    "@xeho91/colors": "^1.2.0",
     "cl-editor": "^2.2.1",
     "normalize.css": "^8.0.1",
     "svelte-inline-svg": "^1.0.8",
